--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "polymorph-ui",
   "theme": "ui",
   "main": "./lib/polymorph-ui",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "A short description of your package",
   "activationCommands": {
     "atom-workspace": "polymorph-ui:toggle"
@@ -12,6 +12,5 @@
   "engines": {
     "atom": ">0.50.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
